# readme-tui

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  install.sh
.github/workflows/: pull_request.yml  release.yml
src/: app.rs  content.rs  events.rs  main.rs  popup.rs  screen.rs
src/ui/: layout.rs  mod.rs
templates/: explanation.md  guides.md  reference.md  tutorials.md
